--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "modular-boilerplate",
+  "name": "uw-github-avatar",
   "version": "0.0.1",
-  "description": "Modular boilerplate for front-end development with a simple, extensible express server",
+  "description": "Displays avatars from Github",
   "main": "server.js",
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ivanoats/modular-boilerplate"
+    "url": "https://github.com/ivanoats/uw-github-avatar"
   },
   "keywords": [
-    "twitter",
+    "github",
     "monitor"
   ],
   "author": "Ivan Storck",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ivanoats/modular-boilerplate/issues"
+    "url": "https://github.com/ivanoats/uw-github-avatar/issues"
   },
-  "homepage": "https://github.com/ivanoats/modular-boilerplate",
+  "homepage": "https://github.com/ivanoats/uw-github-avatar",
   "dependencies": {
-    "express": "^4.10.4"
+    "express": "^4.10.4",
+    "xhr-browserify": "0.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.12",
