--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.12",
+    "browserify": "^6.3.3",
     "debowerify": "^1.0.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
@@ -41,6 +42,8 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-ie-launcher": "^0.1.5",
     "karma-jasmine": "^0.3.1",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "react": "^0.12.1",
+    "reactify": "^0.17.1"
   }
 }
